--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "firebase": "^10.10.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "sweetalert2": "^11.10.7",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
